# logline-motor

./: Cargo.toml  Makefile  README.md  digitalocean.env.example  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/tests/: contracts_tests.rs
core/: Cargo.toml
core/src/: lib.rs  types.rs
datatrack/: Cargo.toml
datatrack/src/: error.rs  lib.rs  models.rs
datatrack/src/store/: db.rs  mem.rs  mod.rs
datatrack/tests/: datatrack_tests.rs
db/: Cargo.toml
db/src/: lib.rs
diamondminer/: Cargo.toml
diamondminer/src/: error.rs  lib.rs
diamondminer/tests/: diamondminer_tests.rs
docs_gen/: Cargo.toml
docs_gen/src/: main.rs
ideas/: Cargo.toml
ideas/src/: lib.rs
ideas/tests/: ideas_tests.rs
lllpack/agents/: censor_llm.lll  companheiro_institucional.lll  validator_llm.lll
lllpack/contracts/: constituicao.lll  governanca.lll  onboarding.lll  regras_tenant.lll
lllpack/contracts/infra/: deployment.lll
lllpack/deployment/: llldeploy.rs
lllpack/plugins/: infra.wasm.metadata
lllpack/scripts/: deploy.sh  pack.sh  run.sh
lllpack/spans/: boot_sequence.lll  genesis_diamond.lll
lllpack/src/: deployment_api.rs
lllpack/triggers/: cron.daily.lll
llm_trainer/: Cargo.toml
llm_trainer/src/: error.rs  lib.rs  models.rs
llm_trainer/tests/: llm_trainer_tests.rs
logline_api/: Cargo.toml
logline_api/src/: api.rs  config.rs  error.rs  health.rs  main.rs  metrics.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs  parser.rs
parser/tests/: parser_tests.rs
plugin_manager/: Cargo.toml
plugin_manager/src/: error.rs  lib.rs  plugin.rs  watcher.rs
plugin_manager/tests/: plugin_manager_tests.rs  plugin_tests.rs  wasm_tests.rs
registry/: Cargo.toml
registry/src/: lib.rs
registry/tests/: registry_tests.rs
ruleset/: Cargo.toml
ruleset/src/: lib.rs  rules.rs
runtime/: Cargo.toml
runtime/src/: events.rs
runtime/tests/: runtime_tests.rs
simulate/: Cargo.toml
simulate/src/: engine.rs  error.rs  lib.rs  models.rs  scenarios.rs
simulate/src/store/: db.rs  mem.rs  mod.rs
simulate/tests/: scenarios_tests.rs  simulate_tests.rs
