[workspace]
members = [
    "core",
    "runtime",
    "parser",
    "registry",
    "contracts",
    "ideas",
    "simulate",
    "ruleset",
    "cli",
    "streaming",
    "docs_gen",
    "db"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"