[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
description = "Biblioteca core com definições compartilhadas para o LogLine Motor"
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
uuid        = { version = "1", features = ["serde", "v4"] }
chrono      = { version = "0.4", features = ["serde"] }
serde_json  = "1.0"