[package]
name = "datatrack"
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
description = "Armazenamento e consulta de spans no LogLine OS"
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"

[dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1.0", features = ["derive"] }
uuid         = { version = "1", features = ["serde","v4"] }
chrono       = { version = "0.4", features = ["serde"] }
once_cell    = "1.17"
db           = { path = "../db" }
thiserror    = "1.0"

[features]
mem-store = []