[package]
name = "db"
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
description = "Cliente Supabase/PostgREST para armazenamento persistente."
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde   = { version = "1.0", features = ["derive"] }
thiserror = "1.0"