[package]
name = "llm_trainer"
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
description = "Pipeline de treino, avaliação e exportação de LLM via LogLine OS"
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"

[dependencies]
tokio           = { version = "1", features = ["rt-multi-thread","macros", "fs"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
thiserror       = "1.0"
datatrack       = { path = "../datatrack" }
diamondminer    = { path = "../diamondminer" }
vectorindex     = { path = "../vectorindex" }
uuid            = { version = "1", features = ["serde","v4"] }