[package]
name = "logline_api"
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
description = "API HTTP integrada para o LogLine Motor"
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"

[dependencies]
warp           = "0.3"
tokio          = { version = "1", features = ["full"] }
futures        = "0.3"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
log            = "0.4"
env_logger     = "0.10"
anyhow         = "1.0"
thiserror      = "1.0"
chrono         = { version = "0.4", features = ["serde"] }
uuid           = { version = "1", features = ["serde", "v4"] }

# LogLine Components
runtime        = { path = "../runtime" }
core           = { path = "../core" }
parser         = { path = "../parser" }
streaming      = { path = "../streaming" }
plugin_manager = { path = "../plugin_manager" }
simulate       = { path = "../simulate" }

[dev-dependencies]
tokio-test     = "0.4"
wiremock       = "0.5"
assert_json    = "0.1"