[package]
name = "plugin_manager"
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
description = "Engine de plugins com suporte a WebAssembly para o LogLine Motor"
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"

[dependencies]
wasmer         = "3.1"
wasmer-cache   = "3.1"
wasmer-wasi    = "3.1"
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
anyhow         = "1.0"
thiserror      = "1.0"
notify         = "5.1"
futures        = "0.3"
tracing        = "0.1"
once_cell      = "1.17"
dashmap        = "5.4"