[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
description = "Runtime principal do LogLine, para orquestração e execução de comandos"
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"

[dependencies]
tokio         = { version = "1", features = ["rt-multi-thread","macros","time"] }
parser        = { path = "../parser" }
registry      = { path = "../registry" }
simulate      = { path = "../simulate" }
contracts     = { path = "../contracts" }
ideas         = { path = "../ideas" }
core          = { path = "../core" }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
uuid          = { version = "1", features = ["serde","v4"] }
chrono        = { version = "0.4", features = ["serde"] }
futures       = "0.3"
anyhow        = "1.0"
thiserror     = "1.0"
tracing       = "0.1"
once_cell     = "1.17"
ruleset       = { path = "../ruleset" }