
[package]
name = "simulate"
version = "0.1.0"
edition = "2021"
authors = ["@danvoulez"]
description = "Biblioteca para executar simulações de entidades LogLine"
license = "Apache-2.0"
repository = "https://git.danvoulez/loglinemotor"

[dependencies]
# Use the full Tokio feature set to ensure that async primitives like
# `tokio::sync::Mutex` are available.  The previous configuration only
# enabled the `time` feature, which prevents use of the sync
# primitives and leads to compile errors.  `full` includes all
# commonly used features (rt, macros, time, sync, etc.) and is
# suitable for the simulation crate.
tokio        = { version = "1", features = ["full"] }
rand         = "0.8"
registry     = { path = "../registry" }
chrono       = { version = "0.4" }
thiserror    = "1.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
uuid         = { version = "1", features = ["v4"] }
once_cell    = "1.17"
db           = { path = "../db" }

[features]
# Enable the in-memory store backend by specifying `--features mem-store` at
# build time.  Without this feature, the Supabase/PostgREST backend is used
# by default.
mem-store = []